--- a/static/index.html
+++ b/static/index.html
@@ -1,86 +1,86 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <title>BS Companion demo</title>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
+<head>
+  <title>BS Companion demo</title>
 
-    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light dark" />
 
-    <script>
-      // You can tweak settings by changing global variable
-      window.LastIcon = {
-        defaultSet: "bootstrap",
-      };
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/last-icon@1.3.3/last-icon.min.js"></script>
+  <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
+  <script>
+    // You can tweak settings by changing global variable
+    window.LastIcon = {
+      defaultSet: "bootstrap",
+    };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/last-icon@1.3.3/last-icon.min.js"></script>
 
-    <link href="./dist/demo.min.css" rel="stylesheet" />
-    <link href="./dist/bs-companion.min.css" rel="stylesheet" />
-    <script src="./dist/bs-companion.min.js" type="module"></script>
-  </head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js" type="module"></script>
 
-  <body>
-    <div class="container py-5">
-      <h1>BS Companion</h1>
+  <link href="./dist/demo.min.css" rel="stylesheet" />
+  <link href="./dist/bs-companion.min.css" rel="stylesheet" />
+  <script src="./dist/bs-companion.min.js" type="module"></script>
+</head>
 
-      <p>BS Companion is a set of components that works great with Bootstrap and BSN (and some that can also but used in a standalone fashion).</p>
+<body>
+  <div class="container py-5">
+    <h1>BS Companion</h1>
 
-      <ul>
-        <li>
-          <a href="responsive-table.html">Responsive Table</a>
-          : Nice responsive tables without ugly scrollbars
-        </li>
-        <li>
-          <a href="bs-tabs.html">BS Tabs</a>
-          : Improved tabs, that collapse down to a dropdown and with linkable tabs
-        </li>
-        <li>
-          <a href="bs-toggle.html">BS Toggle</a>
-          : Self initializing popovers and tabs
-        </li>
-        <li>
-          <a href="toaster.html">Toaster</a>
-          : Generate beautiful toast message without markup
-        </li>
-        <li>
-          <a href="modalizer.html">Modalizer</a>
-          : Generate beautiful modals without markup
-        </li>
-        <li>
-          <a href="form-validator.html">Form Validator</a>
-          : Consistent validator that works across tabs and accordions
-        </li>
-      </ul>
-      <p>
-        For more information,
-        <a href="https://github.com/lekoala/bs-companion">head to the repository</a>
-      </p>
-      <h2>Friendly projects</h2>
-      <ul>
-        <li>
-          <a href="sortable-list.html">Sortable lists</a>
-          : With no code :-)
-        </li>
-        <li>
-          <a href="last-icon.html">BS Icons</a>
-          : Refined
-        </li>
-      </ul>
-    </div>
-  </body>
+    <p>BS Companion is a set of components that works great with Bootstrap and BSN (and some that can also but used in a standalone
+      fashion).</p>
+
+    <ul>
+      <li>
+        <a href="responsive-table.html">Responsive Table</a>
+        : Nice responsive tables without ugly scrollbars
+      </li>
+      <li>
+        <a href="bs-tabs.html">BS Tabs</a>
+        : Improved tabs, that collapse down to a dropdown and with linkable tabs
+      </li>
+      <li>
+        <a href="bs-toggle.html">BS Toggle</a>
+        : Self initializing popovers and tabs
+      </li>
+      <li>
+        <a href="toaster.html">Toaster</a>
+        : Generate beautiful toast message without markup
+      </li>
+      <li>
+        <a href="modalizer.html">Modalizer</a>
+        : Generate beautiful modals without markup
+      </li>
+      <li>
+        <a href="form-validator.html">Form Validator</a>
+        : Consistent validator that works across tabs and accordions
+      </li>
+      <li>
+        <a href="progress-indeterminate.html">Indeterminate progress bars</a>
+        : When you don't know how long it takes
+      </li>
+    </ul>
+    <p>
+      For more information,
+      <a href="https://github.com/lekoala/bs-companion">head to the repository</a>
+    </p>
+    <h2>Friendly projects</h2>
+    <ul>
+      <li>
+        <a href="sortable-list.html">Sortable lists</a>
+        : With no code :-)
+      </li>
+      <li>
+        <a href="last-icon.html">BS Icons</a>
+        : Refined
+      </li>
+    </ul>
+  </div>
+</body>
+
 </html>
