--- a/static/last-icon.html
+++ b/static/last-icon.html
@@ -1,89 +1,86 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <title>Last icon demo</title>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
+<head>
+  <title>Last icon demo</title>
 
-    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light dark" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
+  <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
-    <script type="module"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js" type="module"></script>
 
-    <link href="./dist/demo.min.css" rel="stylesheet" />
-    <link href="./dist/bs-companion.min.css" rel="stylesheet" />
-    <script src="./dist/bs-companion.min.js" type="module"></script>
+  <script type="module"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/last-icon@1.3.3/last-icon.min.js"></script>
+  <link href="./dist/demo.min.css" rel="stylesheet" />
+  <link href="./dist/bs-companion.min.css" rel="stylesheet" />
+  <script src="./dist/bs-companion.min.js" type="module"></script>
 
-    <style>
-      l-i {
-        --size: 1em;
-        display: -webkit-inline-box;
-        display: -ms-inline-flexbox;
-        display: inline-flex;
-        width: var(--size);
-        height: var(--size);
-        vertical-align: middle;
-      }
-      l-i svg {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-      l-i i {
-        font-size: var(--size) !important;
-        color: currentColor;
-      }
+  <script src="https://cdn.jsdelivr.net/npm/last-icon@1.3.3/last-icon.min.js"></script>
 
-      p l-i:not([size]),
-      button l-i:not([size]),
-      a l-i:not([size]),
-      span l-i:not([size]) {
-        vertical-align: -0.125em;
-      }
-    </style>
-  </head>
+  <style>
+    l-i {
+      --size: 1em;
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
+      display: inline-flex;
+      width: var(--size);
+      height: var(--size);
+      vertical-align: middle;
+    }
 
-  <body>
-    <div class="container py-5">
-      <h1>BS Companion</h1>
-      <a href="index.html">Back</a>
-      <hr />
-      <h2>Icons</h2>
+    l-i svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
 
-      <p>
-        Powered by
-        <a href="https://github.com/lekoala/last-icon">Last Icon</a>
-      </p>
+    l-i i {
+      font-size: var(--size) !important;
+      color: currentColor;
+    }
 
-      <p>
-        Use
-        <code>set="bootstrap"</code>
-        or
-        <code>set="bs"</code>
-        or configure default set
-      </p>
-      <l-i name="star"></l-i>
-      <l-i name="github" set="bootstrap" style="--size: 24px"></l-i>
-      <l-i name="alarm-fill" set="bs" style="--size: 36px; color: red"></l-i>
-      <button class="btn btn-primary">
-        <l-i name="github" set="bs"></l-i>
-        Github
-      </button>
-    </div>
-  </body>
+    p l-i:not([size]),
+    button l-i:not([size]),
+    a l-i:not([size]),
+    span l-i:not([size]) {
+      vertical-align: -0.125em;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container py-5">
+    <h1>BS Companion</h1>
+    <a href="index.html">Back</a>
+    <hr />
+    <h2>Icons</h2>
+
+    <p>
+      Powered by
+      <a href="https://github.com/lekoala/last-icon">Last Icon</a>
+    </p>
+
+    <p>
+      Use
+      <code>set="bootstrap"</code>
+      or
+      <code>set="bs"</code>
+      or configure default set
+    </p>
+    <l-i name="star"></l-i>
+    <l-i name="github" set="bootstrap" style="--size: 24px"></l-i>
+    <l-i name="alarm-fill" set="bs" style="--size: 36px; color: red"></l-i>
+    <button class="btn btn-primary">
+      <l-i name="github" set="bs"></l-i>
+      Github
+    </button>
+  </div>
+</body>
+
 </html>
