--- a/static/modalizer.html
+++ b/static/modalizer.html
@@ -1,202 +1,200 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <title>Modalizer demo</title>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
+<head>
+  <title>Modalizer demo</title>
 
-    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light dark" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
+  <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
-    <link href="./dist/demo.min.css" rel="stylesheet" />
-    <link href="./dist/bs-companion.min.css" rel="stylesheet" />
-    <script src="./dist/bs-companion.min.js" type="module"></script>
-    <script type="module">
-      document.querySelector("#darkmode").addEventListener("click", function (ev) {
-        if (document.documentElement.dataset.bsTheme == "dark") {
-          document.documentElement.dataset.bsTheme = "light";
-        } else {
-          document.documentElement.dataset.bsTheme = "dark";
-        }
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js" type="module"></script>
+
+  <link href="./dist/demo.min.css" rel="stylesheet" />
+  <link href="./dist/bs-companion.min.css" rel="stylesheet" />
+  <script src="./dist/bs-companion.min.js" type="module"></script>
+  <script type="module">
+    document.querySelector("#darkmode").addEventListener("click", function (ev) {
+      if (document.documentElement.dataset.bsTheme == "dark") {
+        document.documentElement.dataset.bsTheme = "light";
+      } else {
+        document.documentElement.dataset.bsTheme = "dark";
+      }
+    });
+  </script>
+  <script type="module">
+    let btn = document.getElementById("open-modal");
+    btn.addEventListener("click", (ev) => {
+      const modal = modalizer({
+        body: "Hello!",
+        title: "This is a modal",
+        static: true,
+        showDeny: true,
+        showCancel: true,
+        showConfirm: true,
       });
-    </script>
-    <script type="module">
-      let btn = document.getElementById("open-modal");
+      const el = modal.element || modal._element;
+      el.addEventListener("modal.deny", (ev) => {
+        console.log("denied");
+      });
+      el.addEventListener("modal.confirm", (ev) => {
+        console.log("confirm");
+      });
+      el.addEventListener("modal.cancel", (ev) => {
+        console.log("canceled");
+      });
+    });
+    let btn2 = document.getElementById("open-confirm");
+    btn2.addEventListener("click", (ev) => {
+      // You need both then/catch
+      modalizerConfirm(
+        "Do you confirm this ?",
+        (res) => {
+          console.log("confirm", res);
+        },
+        (res) => {
+          console.log("denied", res);
+        }
+      );
+    });
+    let btn3 = document.getElementById("open-prompt");
+    btn3.addEventListener("click", (ev) => {
+      let body = "What is your name ?";
+      body += "<input type='text' class='form-control mt-2' name='your_name' placeholder='Please enter your name' />";
+
+      // You need both then/catch
+      modalizerConfirm(
+        {
+          body: body,
+          icon: "question",
+        },
+        (res) => {
+          // form elements are exposed as FormData inside detail
+          let name = res.detail.get("your_name");
+          modalizer({
+            body: "Hi " + name + "!",
+            icon: "success",
+          });
+        },
+        (res) => {
+          console.log("denied", res);
+        }
+      );
+    });
+    document.querySelectorAll(".show-example-btn").forEach((btn) => {
       btn.addEventListener("click", (ev) => {
-        const modal = modalizer({
+        ev.preventDefault();
+        modalizer({
           body: "Hello!",
           title: "This is a modal",
-          static: true,
-          showDeny: true,
-          showCancel: true,
-          showConfirm: true,
-        });
-        const el = modal.element || modal._element;
-        el.addEventListener("modal.deny", (ev) => {
-          console.log("denied");
-        });
-        el.addEventListener("modal.confirm", (ev) => {
-          console.log("confirm");
-        });
-        el.addEventListener("modal.cancel", (ev) => {
-          console.log("canceled");
+          icon: btn.dataset.icon,
         });
       });
-      let btn2 = document.getElementById("open-confirm");
-      btn2.addEventListener("click", (ev) => {
-        // You need both then/catch
-        modalizerConfirm(
-          "Do you confirm this ?",
-          (res) => {
-            console.log("confirm", res);
-          },
-          (res) => {
-            console.log("denied", res);
-          }
-        );
-      });
-      let btn3 = document.getElementById("open-prompt");
-      btn3.addEventListener("click", (ev) => {
-        let body = "What is your name ?";
-        body += "<input type='text' class='form-control mt-2' name='your_name' placeholder='Please enter your name' />";
-
-        // You need both then/catch
+    });
+    document.querySelectorAll("[data-confirm]").forEach((btn) => {
+      btn.addEventListener("click", (ev) => {
+        ev.preventDefault();
         modalizerConfirm(
           {
-            body: body,
+            body: btn.dataset.confirm,
             icon: "question",
           },
-          (res) => {
-            // form elements are exposed as FormData inside detail
-            let name = res.detail.get("your_name");
-            modalizer({
-              body: "Hi " + name + "!",
-              icon: "success",
-            });
-          },
-          (res) => {
-            console.log("denied", res);
+          (ev) => {
+            window.location = btn.getAttribute("href");
           }
         );
       });
-      document.querySelectorAll(".show-example-btn").forEach((btn) => {
-        btn.addEventListener("click", (ev) => {
-          ev.preventDefault();
-          modalizer({
-            body: "Hello!",
-            title: "This is a modal",
-            icon: btn.dataset.icon,
-          });
-        });
-      });
-      document.querySelectorAll("[data-confirm]").forEach((btn) => {
-        btn.addEventListener("click", (ev) => {
-          ev.preventDefault();
-          modalizerConfirm(
-            {
-              body: btn.dataset.confirm,
-              icon: "question",
-            },
-            (ev) => {
-              window.location = btn.getAttribute("href");
-            }
-          );
-        });
-      });
-    </script>
-  </head>
+    });
+  </script>
+</head>
 
-  <body>
-    <div class="container py-5">
-      <h1>BS Companion</h1>
-      <a href="index.html">Back</a>
-      <hr />
-      <button id="darkmode">Toggle dark mode</button>
-      <hr />
-      <h2>Modalizer</h2>
-      <p>Here is a static modal that cannot be dismissed. It has a tri-state button set.</p>
-      <button class="btn btn-primary" id="open-modal">Open modal</button>
+<body>
+  <div class="container py-5">
+    <h1>BS Companion</h1>
+    <a href="index.html">Back</a>
+    <hr />
+    <button id="darkmode">Toggle dark mode</button>
+    <hr />
+    <h2>Modalizer</h2>
+    <p>Here is a static modal that cannot be dismissed. It has a tri-state button set.</p>
+    <button class="btn btn-primary" id="open-modal">Open modal</button>
 
-      <p class="mt-3">Here is a confirm modal. You can easily pass callbacks.</p>
-      <button class="btn btn-primary" id="open-confirm">Open confirm</button>
+    <p class="mt-3">Here is a confirm modal. You can easily pass callbacks.</p>
+    <button class="btn btn-primary" id="open-confirm">Open confirm</button>
 
-      <p class="mt-3">Here is a prompt modal. Its form elements are returned in the event details.</p>
-      <button class="btn btn-primary" id="open-prompt">Open prompt</button>
+    <p class="mt-3">Here is a prompt modal. Its form elements are returned in the event details.</p>
+    <button class="btn btn-primary" id="open-prompt">Open prompt</button>
 
-      <p class="mt-3">A built in data confirm thing</p>
-      <a href="https://www.google.com" data-confirm="Do you confirm you want to go to google ?" class="btn btn-primary">Confirm btn</a>
+    <p class="mt-3">A built in data confirm thing</p>
+    <a href="https://www.google.com" data-confirm="Do you confirm you want to go to google ?" class="btn btn-primary">Confirm btn</a>
 
-      <hr />
-      <h2>Modal icons</h2>
+    <hr />
+    <h2>Modal icons</h2>
 
-      <p>You can disable the icon with showIcon: false</p>
+    <p>You can disable the icon with showIcon: false</p>
 
-      <table class="table" width="400">
-        <tbody>
-          <tr>
-            <td><strong>success</strong></td>
-            <td>
-              <div class="modal-icon modal-success modal-icon-show"></div>
-            </td>
-            <td>
-              <button class="show-example-btn btn btn-primary" data-icon="success" aria-label="Try me! Example: success modal">Try me!</button>
-            </td>
-          </tr>
-          <tr>
-            <td><strong>error</strong></td>
-            <td>
-              <div class="modal-icon modal-error modal-icon-show"></div>
-            </td>
-            <td>
-              <button class="show-example-btn btn btn-primary" data-icon="error" aria-label="Try me! Example: error modal">Try me!</button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>warning</strong>
-              <br />
-              (default)
-            </td>
-            <td>
-              <div class="modal-icon modal-warning modal-icon-show"></div>
-            </td>
-            <td>
-              <button class="show-example-btn btn btn-primary" data-icon="warning" aria-label="Try me! Example: warning modal">Try me!</button>
-            </td>
-          </tr>
-          <tr>
-            <td><strong>info</strong></td>
-            <td>
-              <div class="modal-icon modal-info modal-icon-show"></div>
-            </td>
-            <td>
-              <button class="show-example-btn btn btn-primary" data-icon="info" aria-label="Try me! Example: info modal">Try me!</button>
-            </td>
-          </tr>
-          <tr>
-            <td><strong>question</strong></td>
-            <td>
-              <div class="modal-icon modal-question modal-icon-show"></div>
-            </td>
-            <td>
-              <button class="show-example-btn btn btn-primary" data-icon="question" aria-label="Try me! Example: question modal">Try me!</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </body>
+    <table class="table" width="400">
+      <tbody>
+        <tr>
+          <td><strong>success</strong></td>
+          <td>
+            <div class="modal-icon modal-success modal-icon-show"></div>
+          </td>
+          <td>
+            <button class="show-example-btn btn btn-primary" data-icon="success" aria-label="Try me! Example: success modal">Try
+              me!</button>
+          </td>
+        </tr>
+        <tr>
+          <td><strong>error</strong></td>
+          <td>
+            <div class="modal-icon modal-error modal-icon-show"></div>
+          </td>
+          <td>
+            <button class="show-example-btn btn btn-primary" data-icon="error" aria-label="Try me! Example: error modal">Try me!</button>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <strong>warning</strong>
+            <br />
+            (default)
+          </td>
+          <td>
+            <div class="modal-icon modal-warning modal-icon-show"></div>
+          </td>
+          <td>
+            <button class="show-example-btn btn btn-primary" data-icon="warning" aria-label="Try me! Example: warning modal">Try
+              me!</button>
+          </td>
+        </tr>
+        <tr>
+          <td><strong>info</strong></td>
+          <td>
+            <div class="modal-icon modal-info modal-icon-show"></div>
+          </td>
+          <td>
+            <button class="show-example-btn btn btn-primary" data-icon="info" aria-label="Try me! Example: info modal">Try me!</button>
+          </td>
+        </tr>
+        <tr>
+          <td><strong>question</strong></td>
+          <td>
+            <div class="modal-icon modal-question modal-icon-show"></div>
+          </td>
+          <td>
+            <button class="show-example-btn btn btn-primary" data-icon="question" aria-label="Try me! Example: question modal">Try
+              me!</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
+
 </html>
