--- a/static/sortable-list.html
+++ b/static/sortable-list.html
@@ -1,61 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <title>Sortable list demo</title>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
+<head>
+  <title>Sortable list demo</title>
 
-    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light dark" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
+  <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
-    <script type="module"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js" type="module"></script>
 
-    <link href="./dist/demo.min.css" rel="stylesheet" />
-    <link href="./dist/bs-companion.min.css" rel="stylesheet" />
-    <script src="./dist/bs-companion.min.js" type="module"></script>
+  <script type="module"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/modular-behaviour.js@3.1.0/modular-behaviour.min.js" type="module"></script>
-  </head>
+  <link href="./dist/demo.min.css" rel="stylesheet" />
+  <link href="./dist/bs-companion.min.css" rel="stylesheet" />
+  <script src="./dist/bs-companion.min.js" type="module"></script>
 
-  <body>
-    <div class="container py-5">
-      <h1>BS Companion</h1>
-      <a href="index.html">Back</a>
-      <hr />
-      <h2>Sortable lists</h2>
+  <script src="https://cdn.jsdelivr.net/npm/modular-behaviour.js@3.1.0/modular-behaviour.min.js" type="module"></script>
+</head>
 
-      <p>
-        Powered by
-        <a href="https://github.com/lekoala/modular-behaviour.js">Modular behaviour</a>
-        and
-        <a href="http://SortableJS.github.io/Sortable/">SortableJS</a>
-      </p>
+<body>
+  <div class="container py-5">
+    <h1>BS Companion</h1>
+    <a href="index.html">Back</a>
+    <hr />
+    <h2>Sortable lists</h2>
 
-      <modular-behaviour name="Sortable.create" src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/modular/sortable.complete.esm.min.js">
-        <ul id="simpleList" class="list-group">
-          <li class="list-group-item">
-            This is
-            <a href="http://SortableJS.github.io/Sortable/">Sortable</a>
-          </li>
-          <li class="list-group-item">It works with Bootstrap...</li>
-          <li class="list-group-item">...out of the box.</li>
-          <li class="list-group-item">It has support for touch devices.</li>
-          <li class="list-group-item">Just drag some elements around.</li>
-        </ul>
-      </modular-behaviour>
-    </div>
-  </body>
+    <p>
+      Powered by
+      <a href="https://github.com/lekoala/modular-behaviour.js">Modular behaviour</a>
+      and
+      <a href="http://SortableJS.github.io/Sortable/">SortableJS</a>
+    </p>
+
+    <modular-behaviour name="Sortable.create" src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/modular/sortable.complete.esm.min.js">
+      <ul id="simpleList" class="list-group">
+        <li class="list-group-item">
+          This is
+          <a href="http://SortableJS.github.io/Sortable/">Sortable</a>
+        </li>
+        <li class="list-group-item">It works with Bootstrap...</li>
+        <li class="list-group-item">...out of the box.</li>
+        <li class="list-group-item">It has support for touch devices.</li>
+        <li class="list-group-item">Just drag some elements around.</li>
+      </ul>
+    </modular-behaviour>
+  </div>
+</body>
+
 </html>
