--- a/static/toaster.html
+++ b/static/toaster.html
@@ -1,176 +1,172 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <title>Toaster demo</title>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
+<head>
+  <title>Toaster demo</title>
 
-    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light dark" />
 
-    <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
+  <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6/dist/jquery.min.js" type="module"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap.native@4.2.0/dist/bootstrap-native.min.js"></script> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7/dist/jquery.min.js" type="module"></script>
 
-    <link href="./dist/demo.min.css" rel="stylesheet" />
-    <link href="./dist/bs-companion.min.css" rel="stylesheet" />
-    <script src="./dist/bs-companion.min.js" type="module"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap.native@4.2.0/dist/bootstrap-native.min.js"></script> -->
 
-    <style>
-      l-i {
-        --size: 1em;
-        display: inline-flex;
-        width: var(--size);
-        height: var(--size);
-        vertical-align: middle;
-      }
-      l-i svg {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+  <link href="./dist/demo.min.css" rel="stylesheet" />
+  <link href="./dist/bs-companion.min.css" rel="stylesheet" />
+  <script src="./dist/bs-companion.min.js" type="module"></script>
 
-    <script type="module">
-      document.querySelector(".js-toast").addEventListener("click", (ev) => {
-        // You can simply pass a string
-        toaster("Hello world");
-      });
-      document.querySelector(".js-toast-header").addEventListener("click", (ev) => {
-        toaster({
-          body: "Hello world <a href='#'>some link here</a>",
-          header: `<div class="d-flex align-items-center"><l-i name="star" class="me-2"></l-i> My header</div>`,
-          autohide: false,
-        });
-      });
-      document.querySelector(".js-toast-no-hide").addEventListener("click", (ev) => {
-        toaster({
-          body: "Hello world (no hide)",
-          autohide: false,
-        });
-      });
-      document.querySelector(".js-toast-bottom").addEventListener("click", (ev) => {
-        toaster({
-          body: "Hello world from bottom corner (no hide)",
-          autohide: false,
-          placement: "bottom-right",
-        });
-      });
-      document.querySelector(".error-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableDefault();
-        Toasts.error("Hello world");
-      });
-      document.querySelector(".warning-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableDefault();
-        Toasts.warning("Hello world");
-      });
-      document.querySelector(".success-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableDefault();
-        Toasts.success("Hello world");
-      });
-      document.querySelector(".soft-error-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableSoft();
-        Toasts.error("Hello world");
-      });
-      document.querySelector(".soft-error-toast-header")?.addEventListener("click", (ev) => {
-        Toasts.enableSoft();
-        Toasts.error("Hello world <a href='#'>some link here</a>", {
-          header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
-          autohide: false,
-        });
-      });
-      document.querySelector(".soft-warning-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableSoft();
-        Toasts.warning("Hello world");
-      });
-      document.querySelector(".soft-success-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableSoft();
-        Toasts.success("Hello world", {
-          header: "Success!",
-        });
-      });
-      document.querySelector(".gradient-error-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableGradient();
-        Toasts.error("Hello world");
-      });
-      document.querySelector(".gradient-error-toast-header")?.addEventListener("click", (ev) => {
-        Toasts.enableGradient();
-        Toasts.error("Hello world <a href='#'>some link here</a>", {
-          header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
-          autohide: false,
-        });
-      });
-      document.querySelector(".gradient-warning-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableGradient();
-        Toasts.warning("Hello world");
-      });
-      document.querySelector(".gradient-info-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableGradient();
-        Toasts.info("Hello world", {
-          header: "Some info!",
-        });
-      });
-      document.querySelector(".gradient-success-toast")?.addEventListener("click", (ev) => {
-        Toasts.enableGradient();
-        Toasts.success("Hello world");
-      });
-    </script>
-  </head>
+  <style>
+    l-i {
+      --size: 1em;
+      display: inline-flex;
+      width: var(--size);
+      height: var(--size);
+      vertical-align: middle;
+    }
 
-  <body>
-    <div class="container py-5">
-      <h1>BS Companion</h1>
-      <a href="index.html">Back</a>
-      <hr />
-      <h2>Toaster</h2>
-      <p>Stacks will animate properly thanks to updated css.</p>
-      <button class="btn btn-primary js-toast">Add toast</button>
-      <button class="btn btn-primary js-toast-header">Add toast with header and icon</button>
-      <button class="btn btn-primary js-toast-no-hide">Add toast (no hide)</button>
-      <button class="btn btn-primary js-toast-bottom">Add toast to bottom corner (no hide)</button>
-      <hr />
-      <p>
-        Regular styles. Use
-        <code>Toasts</code>
-        class for ease of use.
-      </p>
-      <button class="btn btn-success success-toast">Success toast</button>
-      <button class="btn btn-warning warning-toast">Warning toast</button>
-      <button class="btn btn-danger error-toast">Error toast</button>
-      <hr />
-      <p>
-        Soft styles. Toggle with
-        <code>Toasts.soft</code>
-        property.
-      </p>
-      <button class="btn btn-success soft-success-toast">Success toast</button>
-      <button class="btn btn-warning soft-warning-toast">Warning toast</button>
-      <button class="btn btn-danger soft-error-toast">Error toast</button>
-      <button class="btn btn-danger soft-error-toast-header">Toast with header</button>
-      <hr />
-      <p>
-        Gradient styles. Toggle with
-        <code>Toasts.gradient</code>
-        property.
-      </p>
-      <button class="btn btn-success gradient-success-toast">Success toast</button>
-      <button class="btn btn-info gradient-info-toast">Info toast</button>
-      <button class="btn btn-warning gradient-warning-toast">Warning toast</button>
-      <button class="btn btn-danger gradient-error-toast">Error toast</button>
-      <button class="btn btn-danger gradient-error-toast-header">Error toast with header</button>
-    </div>
-  </body>
+    l-i svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+
+  <script type="module">
+    document.querySelector(".js-toast").addEventListener("click", (ev) => {
+      // You can simply pass a string
+      toaster("Hello world");
+    });
+    document.querySelector(".js-toast-header").addEventListener("click", (ev) => {
+      toaster({
+        body: "Hello world <a href='#'>some link here</a>",
+        header: `<div class="d-flex align-items-center"><l-i name="star" class="me-2"></l-i> My header</div>`,
+        autohide: false,
+      });
+    });
+    document.querySelector(".js-toast-no-hide").addEventListener("click", (ev) => {
+      toaster({
+        body: "Hello world (no hide)",
+        autohide: false,
+      });
+    });
+    document.querySelector(".js-toast-bottom").addEventListener("click", (ev) => {
+      toaster({
+        body: "Hello world from bottom corner (no hide)",
+        autohide: false,
+        placement: "bottom-right",
+      });
+    });
+    document.querySelector(".error-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableDefault();
+      Toasts.error("Hello world");
+    });
+    document.querySelector(".warning-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableDefault();
+      Toasts.warning("Hello world");
+    });
+    document.querySelector(".success-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableDefault();
+      Toasts.success("Hello world");
+    });
+    document.querySelector(".soft-error-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableSoft();
+      Toasts.error("Hello world");
+    });
+    document.querySelector(".soft-error-toast-header")?.addEventListener("click", (ev) => {
+      Toasts.enableSoft();
+      Toasts.error("Hello world <a href='#'>some link here</a>", {
+        header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
+        autohide: false,
+      });
+    });
+    document.querySelector(".soft-warning-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableSoft();
+      Toasts.warning("Hello world");
+    });
+    document.querySelector(".soft-success-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableSoft();
+      Toasts.success("Hello world", {
+        header: "Success!",
+      });
+    });
+    document.querySelector(".gradient-error-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableGradient();
+      Toasts.error("Hello world");
+    });
+    document.querySelector(".gradient-error-toast-header")?.addEventListener("click", (ev) => {
+      Toasts.enableGradient();
+      Toasts.error("Hello world <a href='#'>some link here</a>", {
+        header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
+        autohide: false,
+      });
+    });
+    document.querySelector(".gradient-warning-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableGradient();
+      Toasts.warning("Hello world");
+    });
+    document.querySelector(".gradient-info-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableGradient();
+      Toasts.info("Hello world", {
+        header: "Some info!",
+      });
+    });
+    document.querySelector(".gradient-success-toast")?.addEventListener("click", (ev) => {
+      Toasts.enableGradient();
+      Toasts.success("Hello world");
+    });
+  </script>
+</head>
+
+<body>
+  <div class="container py-5">
+    <h1>BS Companion</h1>
+    <a href="index.html">Back</a>
+    <hr />
+    <h2>Toaster</h2>
+    <p>Stacks will animate properly thanks to updated css.</p>
+    <button class="btn btn-primary js-toast">Add toast</button>
+    <button class="btn btn-primary js-toast-header">Add toast with header and icon</button>
+    <button class="btn btn-primary js-toast-no-hide">Add toast (no hide)</button>
+    <button class="btn btn-primary js-toast-bottom">Add toast to bottom corner (no hide)</button>
+    <hr />
+    <p>
+      Regular styles. Use
+      <code>Toasts</code>
+      class for ease of use.
+    </p>
+    <button class="btn btn-success success-toast">Success toast</button>
+    <button class="btn btn-warning warning-toast">Warning toast</button>
+    <button class="btn btn-danger error-toast">Error toast</button>
+    <hr />
+    <p>
+      Soft styles. Toggle with
+      <code>Toasts.soft</code>
+      property.
+    </p>
+    <button class="btn btn-success soft-success-toast">Success toast</button>
+    <button class="btn btn-warning soft-warning-toast">Warning toast</button>
+    <button class="btn btn-danger soft-error-toast">Error toast</button>
+    <button class="btn btn-danger soft-error-toast-header">Toast with header</button>
+    <hr />
+    <p>
+      Gradient styles. Toggle with
+      <code>Toasts.gradient</code>
+      property.
+    </p>
+    <button class="btn btn-success gradient-success-toast">Success toast</button>
+    <button class="btn btn-info gradient-info-toast">Info toast</button>
+    <button class="btn btn-warning gradient-warning-toast">Warning toast</button>
+    <button class="btn btn-danger gradient-error-toast">Error toast</button>
+    <button class="btn btn-danger gradient-error-toast-header">Error toast with header</button>
+  </div>
+</body>
+
 </html>
